# radar-web-monitor

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml  run_cap.sh
radar_web_monitor/: app.py
radar_web_monitor/static/js/: render.js
radar_web_monitor/templates/: detail.html  index.html  radar.html  setup.html
scripts/: build_gRPC_server.sh  fetch_evm.py  fetch_latest_from_evm.sh  get_latest_case_num.py  install_systemctl_user_unit.sh  mmwave-grpc-server.service  preprocessing_for_inference.sh  preprocessing_latest_camera.sh  preprocessing_latest_radar.sh  radar-web-monitor.service
